...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dRi-HL-Ok6">
                                                    <rect key="frame" x="335" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="42" id="n3W-4i-B09"/>
                                                        <constraint firstAttribute="height" constant="42" id="z1M-HL-w4g"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="active_icon"/>
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="dAv-f2-6CG" eventType="touchUpInside" id="YMv-pE-W5I"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eik-ig-hSq">
                                <rect key="frame" x="9" y="55" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="NavBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="24" id="3wM-DF-9mX"/>
                                    <constraint firstAttribute="height" constant="24" id="rOG-FP-64h"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="back_icon"/>
...
                                    <constraint firstAttribute="height" constant="60" id="tta-Pj-tIY"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BC4-R5-bua">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="0zF-Vk-Me0"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
