...
    
    // MARK: - Overrides Methods
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        presenter?.viewIsReady()
        
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: [],
...
